# happy_fox_assessment

./: .env.sample  README.md  email_fetcher.py  process_email.py  pyproject.toml  rule.json  rule_collection.py  rules.json.sample  utils.py
